# abacus_web_app

./: .gitignore  Dockerfile  README.md  local_build.ps1  pyproject.toml
.config/: hdfsconfig.conf  pycodestyle
.github/workflows/: image_build.yaml  pylint.yaml
app/: __init__.py  routes.py
app/auth_services/: AuthServiceBase.py  DexAuthService.py  MockAuthService.py
app/static/: styles.css
app/templates/: base.html  query.html  query_result.html  upload.html
helm_chart/: Chart.yaml  abacus-web-app-0.0.1.tgz  build_deploy.ps1  build_pkg.ps1  values.yaml
helm_chart/templates/: configmap.yaml  deployment.yaml
mock/datawave_cli/: main.py
src/app/: __init__.py  main.py  routes.py
src/app/auth_services/: AuthServiceBase.py  DexAuthService.py  EntraAuthService.py  KeycloakAuthService.py  MockAuthService.py  __init__.py
src/app/routes/: __init__.py  dictionary.py  query.py  upload.py
src/app/static/: styles.css
src/app/templates/: base.html  dictionary.html  index.html  query.html  query_result.html  upload.html
src/app/upload_services/: AzureBlobStorageUploadService.py  BaseUploadService.py  HdfsUploadService.py  MockUploadService.py  __init__.py
src/app/utils/: LevelFilter.py  create_logger.py
src/mock/datawave_cli/: main.py  sample_authorization.json  sample_dict.json  sample_query.json
