[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abacus_web_app"
version = "0.0.1"
authors = [
    { name = "David Lambertson" },
    { name = "James Rider" }
]
description = "Web App to authenticate a user before giving them access to the Datawave endpoints"
dependencies = [
    "flask",
    "flask_oidc",
    "requests",
    "pandas",
    "click",
    "azure-storage-blob",
    "hdfs"
]

[project.urls]
Homepage = "https://github.com/DL-USAF/abacus_web_app"